Ingress-Demo/web1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
  labels:
    app: webapp1
spec:
  template:
    metadata:
      name: web1-pod
      labels:
        app: webapp1
    spec:
      containers:
      - name: nginx-container
        image: nginx
  replicas: 2
  selector:
    matchLabels:
      app: webapp1
