Ingress-Demo/web2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  labels:
    app: webapp2
spec:
  template:
    metadata:
      name: web2-pod
      labels:
        app: webapp2
    spec:
      containers:
      - name: httpd-container
        image: httpd
  replicas: 2
  selector:
    matchLabels:
      app: webapp2
