Ingress-Demo/web1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webapp1
