Ingress-Demo/web2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webapp2
