Ingress-Demo/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /nginx
          backend:
            serviceName: web1
            servicePort: 80
        - path: /httpd
          backend:
            serviceName: web2
            servicePort: 80
